--- a/bioimageio_chatbot/static/index.html
+++ b/bioimageio_chatbot/static/index.html
@@ -304,7 +304,7 @@
         <button id="login-button" class="btn btn-primary">Login</button>
         <div class="login-spinner spinner" style="display:none"></div>
         <br>
-        <a href="https://forms.gle/fEnj68Rxut1VUX1Y8" target="_blank">sign up here</a>
+        <a href="https://ai.imjoy.io/public/apps/hypha-login/" target="_blank">Sign up here</a>
       </div>
     </div>
   </div>
