Add message log disclaimer

--- a/bioimageio_chatbot/static/index.html
+++ b/bioimageio_chatbot/static/index.html
@@ -273,9 +273,9 @@
         </button> for each response, or by clicking the 'Feedback' button below.
       </p>
 
-      <p>Note that the chatbot is still in beta and is being actively developed. See <a
+      <p>Note that the chatbot is still in beta and is being actively developed, we will log the message you input into the chatbot for further investigation of issues and support our development. See <a
           href="https://github.com/bioimage-io/bioimageio-chatbot/blob/main/docs/DISCLAIMER.md" target="_blank">the
-          Disclaimer</a> for more details.</p>
+          Disclaimer</a> for more details. If you want to to remove your chat logs, please contact us via <a href="https://oeway.typeform.com/to/K3j2tJt7" target="_blank">this form</a>.</p>
 
       <button class="feedback-button" onclick="$('.announcement-banner').hide()">OK, got it!</button>
     </div>
