Fix assistant in the URL

--- a/bioimageio_chatbot/static/index.html
+++ b/bioimageio_chatbot/static/index.html
@@ -597,7 +597,7 @@
         const imjoyRPC = await loadImJoyRPC()
         const api = await imjoyRPC.setupRPC({name: 'BioImage.IO Chatbot'});
         await api.export({setup(){}, async run(ctx){
-          assistantName = ctx.config && ctx.config.assistant_name || urlParams.get('assistant') || "Melman"
+          assistantName = urlParams.get('assistant') || (ctx.config && ctx.config.assistant_name) || "Melman"
           if(api.getChatbotExtensions){
             const extensions = await api.getChatbotExtensions(_registerExtension) // object with name: extension
             for(let ext of Object.values(extensions)){
