--- a/bioimageio_chatbot/static/index.html
+++ b/bioimageio_chatbot/static/index.html
@@ -971,12 +971,13 @@
 
         // Show 'Thinking...' status while waiting for the server's response
         showThinkingStatus();
-
+        
         currentMessageId = "message-" + (chat_history.length+2)
-        appendRobotMessage("Thinking...", currentMessageId); // Append robot message to the message container
+        appendRobotMessage("", currentMessageId); // Append robot message to the message container
+        $(`#spinner-${currentMessageId}`).show();
 
         let accumulatedArgs = ""
-        function statusCallback(message) {
+       function statusCallback(message) {
           if (message.type === 'function_call') {
             if (message.status === 'in_progress') {
               accumulatedArgs += message.arguments
@@ -1022,6 +1023,7 @@
         finally {
           // Remove spinner and set status back to 'Ready to chat' after finishing
           $('.spinner').remove();
+          $(`#spinner-${currentMessageId}`).hide();
           // Convert the message to HTML using the marked library
           const steps = response.steps;
           let message = response.text;
@@ -1052,7 +1054,10 @@
           <div class="rounded-icon-container">
             <img style="width: 20px;" src="https://bioimage.io/static/img/bioimage-io-icon.svg" alt="Melman the Giraffe" width="30" height="30">
           </div>
-          <div class="message-content markdown-body" id="content-${messageId}">${htmlMessage}</div>
+          <div class="message-content markdown-body">
+            <h3 id="spinner-${messageId}" style="display:none;"><div class="spinner" style='display: inline-block;width:25px;height:25px;margin-bottom:-4px;'></div>🤔Thinking...</h3>
+            <div id="content-${messageId}">${htmlMessage}</div>
+          </div>
         </div>
         <div class="message-output" style="display:none;" id="output-${messageId}"></div>
         <div class="feedback-buttons"  id="${messageId}" style="margin-left: 35px; margin-top: -6px;"> <!-- Add margin-top here -->
