--- a/bioimageio_chatbot/static/bioimage-model-zoo-extension.imjoy.html
+++ b/bioimageio_chatbot/static/bioimage-model-zoo-extension.imjoy.html
@@ -71,7 +71,7 @@ def search(config: ModelZooSearchInput, resource_items: List[Dict[str, Any]]) ->
 
 async def load_model_info():
     response = await fetch("https://bioimage-io.github.io/collection-bioimage-io/collection.json")
-    model_info = await response.json()
+    model_info = await response.model_dump_json()
     model_info = model_info.to_py()
     resource_items = model_info['collection']
     return resource_items
