--- a/bioimageio_chatbot/static/index.html
+++ b/bioimageio_chatbot/static/index.html
@@ -555,14 +555,14 @@
       if(!extension.tools && extension.execute){
         extension.id = extension.name.replace(/\s+/g, '-')
         extension.tools = {
-          run: extension.execute
+          _: extension.execute
         }
         const get_schema = extension.get_schema
         if(get_schema){
           extension.get_schema = async function(){
             const schema = await get_schema()
             return {
-              run: schema
+              _: schema
             }
           }
         }
@@ -1041,7 +1041,7 @@
           const steps = response.steps;
           let message = response.text;
           if(steps && steps.length > 0){
-            message = message + "<br>\n\n<details> <summary>🔍More Details</summary>\n\n"
+            message = message + "\n\n<br><details> <summary>🔍More Details</summary>\n\n"
             for(let step of steps){
               message = message + `<div class="step">${step.name}</div>\n\n\`\`\`\n\n${JSON.stringify(step.details, null, 2)}\n\n\`\`\`\n\n`
             }
